--- a/backend-java/PxlNews/config-service/src/main/resources/config/gateway-service.yml
+++ b/backend-java/PxlNews/config-service/src/main/resources/config/gateway-service.yml
@@ -15,7 +15,7 @@ spring:
         corsConfigurations:
           '[/**]':
             allowedOrigins:
-              - "*"
+              - "localhost"
             allowedMethods:
               - "*"
             allowedHeaders:
