--- a/backend-java/PxlNews/config-service/src/main/resources/config/gateway-service.yml
+++ b/backend-java/PxlNews/config-service/src/main/resources/config/gateway-service.yml
@@ -31,6 +31,13 @@ spring:
             - Path=/post/**
           filters:
             - RewritePath=/post/(?<path>.*), /$\{path}
+
+        - id: review-service
+          uri: lb://review-service
+          predicates:
+            - Path=/review/**
+          filters:
+            - RewritePath=/review/(?<path>.*), /$\{path}
 eureka:
   client:
     serviceUrl:
