--- a/backend-java/PxlNews/post-service/pom.xml
+++ b/backend-java/PxlNews/post-service/pom.xml
@@ -58,5 +58,10 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-openfeign</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-amqp</artifactId>
+            <version>2.2.2.RELEASE</version>
+        </dependency>
     </dependencies>
 </project>
