[US10-12] #11 #12 #13 Implemented user story
Added Notification service in the backend

--- a/backend-java/PxlNews/config-service/src/main/resources/config/gateway-service.yml
+++ b/backend-java/PxlNews/config-service/src/main/resources/config/gateway-service.yml
@@ -38,6 +38,13 @@ spring:
             - Path=/review/**
           filters:
             - RewritePath=/review/(?<path>.*), /$\{path}
+
+        - id: comment-service
+          uri: lb://comment-service
+          predicates:
+            - Path=/comment/**
+          filters:
+            - RewritePath=/comment/(?<path>.*), /$\{path}
 eureka:
   client:
     serviceUrl:
