--- a/backend-java/PxlNews/docker-compose.yaml
+++ b/backend-java/PxlNews/docker-compose.yaml
@@ -24,6 +24,18 @@ services:
     volumes:
       - review_db_data:/var/lib/mysql
 
+  comment-service:
+    image: mysql:8.0
+    container_name: commentservice_db
+    environment:
+      MYSQL_ALLOW_EMPTY_PASSWORD: "yes"
+      MYSQL_DATABASE: commentservice_db
+    ports:
+      - "3308:3306"
+    command: --default-authentication-plugin=mysql_native_password
+    volumes:
+      - comment_db_data:/var/lib/mysql
+
   rabbitmq:
     image: rabbitmq:3-management-alpine
     container_name: rabbitmq
@@ -37,3 +49,4 @@ services:
 volumes:
   post_db_data:
   review_db_data:
+  comment_db_data:
