--- a/backend-java/PxlNews/review-service/pom.xml
+++ b/backend-java/PxlNews/review-service/pom.xml
@@ -63,5 +63,10 @@
             <artifactId>spring-boot-starter-amqp</artifactId>
             <version>2.2.2.RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+            <version>3.3.1</version>
+        </dependency>
     </dependencies>
 </project>
